--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,18 @@
 name: borg
-description: Command line tool to manage configuration of Dart mono repo
+description: Command-line tool to manage configuration of Dart mono repo
 version: 1.0.0
 homepage: https://github.com/alexei-sintotski/dart-borg
 
+executables:
+  borg: main
+
 environment:
   sdk: ">=2.7.0 <3.0.0"
+
+dependencies:
+  args: ^1.6.0
+  glob: ^1.2.0
+  meta: ^1.1.0
 
 dev_dependencies:
   dependency_validator: ^1.4.0
