--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   collection: ^1.14.0
   glob: ^1.2.0
   meta: ^1.1.0
+  path: ^1.6.0
   pubspec_lock: ^2.0.0
   pubspec_yaml: ^2.0.0
 
