--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 dependencies:
   args: ^1.5.0
   collection: ^1.14.0
+  functional_data: ^0.3.0
   glob: ^1.2.0
   meta: ^1.1.0
   path: ^1.6.0
@@ -21,6 +22,8 @@ dependencies:
   yaml: ^2.2.0
 
 dev_dependencies:
+  build_runner: ^1.9.0
   dependency_validator: ^1.4.0
+  functional_data_generator: ^0.3.0
   test: ^1.14.0
   test_coverage: ^0.4.0
