--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: borg
-description: Command-line tool for consistent configuration management of Dart packages in a mono repository
+description: Dart borg is a command-line tool to support development teams working on large scale Dart and Flutter mono repositories.
 version: 1.3.1
 homepage: https://github.com/alexei-sintotski/dart-borg
 
