--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   collection: ^1.14.0
   functional_data: ^0.3.0
   glob: ^1.2.0
+  json2yaml: ^1.0.0
   meta: ^1.1.0
   path: ^1.6.0
   plain_optional: ^0.1.0
