--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: borg
 description: Dart borg is a command-line tool to support development teams working on large scale Dart and Flutter mono repositories.
-version: 1.4.5+1
+version: 1.4.6
 homepage: https://github.com/alexei-sintotski/dart-borg
 
 executables:
@@ -15,7 +15,7 @@ dependencies:
   functional_data: ^0.3.0
   glob: ^1.2.0
   json2yaml: ^1.0.0
-  meta: ^1.1.0
+  meta: ">=1.1.0 <1.3.0"
   path: ^1.6.0
   plain_optional: ^0.1.0
   pubspec_lock: ^2.0.0
