--- a/test/integration_test_sets/package_without_pubspec_lock/pubspec.yaml
+++ b/test/integration_test_sets/package_without_pubspec_lock/pubspec.yaml
@@ -7,7 +7,7 @@ dependencies:
   args: ^1.5.0
   collection: ^1.14.0
   glob: ^1.2.0
-  meta: ^1.1.0
+  meta: ">=1.1.0 <1.3.0"
   path: ^1.6.0
   pubspec_lock: ^2.0.0
   pubspec_yaml: ^2.0.0
