--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,24 +7,23 @@ executables:
   borg: main
 
 environment:
-  sdk: ">=2.10.0 <3.0.0"
+  sdk: ">=2.15.0 <3.0.0"
 
 dependencies:
-  args: ^1.5.0
-  collection: ^1.14.0
-  functional_data: ^0.3.0
-  glob: ^1.2.0
-  json2yaml: ^1.0.0
-  meta: ">=1.1.0 <1.3.0"
-  path: ^1.6.0
-  plain_optional: ^0.1.0
-  pubspec_lock: ^2.0.0
-  pubspec_yaml: ^2.0.0
-  yaml: ^2.2.0
+  args: ^2.3.0
+  collection:
+  functional_data: ^1.0.0
+  glob: ^2.0.0
+  json2yaml: ^3.0.0
+  meta: ^1.7.0
+  path: ^1.8.0
+  plain_optional:
+  pubspec_lock: ^3.0.0
+  pubspec_yaml: ^3.1.0
+  yaml: ^3.1.0
 
 dev_dependencies:
-  build_runner: ^1.9.0
-  dependency_validator: ^2.0.0
-  functional_data_generator: ^0.3.0
-  test: ^1.15.0
-  test_coverage: ^0.5.0
+  build_runner: ^2.1.0
+  dependency_validator: ^3.1.0
+  functional_data_generator: ^1.1.0
+  test: ^1.18.0
