--- a/test/integration_test_sets/package_with_pubspec_lock/pubspec.yaml
+++ b/test/integration_test_sets/package_with_pubspec_lock/pubspec.yaml
@@ -4,10 +4,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  args: ^1.5.0
+  args: ^2.3.0
   collection: ^1.14.0
-  glob: ^1.2.0
-  meta: ">=1.1.0 <1.3.0"
-  path: ^1.6.0
-  pubspec_lock: ^2.0.0
-  pubspec_yaml: ^2.0.0
+  glob: ^2.0.0
+  meta: ^1.7.0
+  path: ^1.8.0
+  pubspec_lock: ^3.0.0
+  pubspec_yaml: ^3.1.0
