--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,13 @@ environment:
 
 dependencies:
   args: ^2.3.0
-  collection:
+  collection: ^1.15.0
   functional_data: ^1.0.0
   glob: ^2.0.0
   json2yaml: ^3.0.0
   meta: ^1.7.0
   path: ^1.8.0
-  plain_optional:
+  plain_optional: ^1.0.0
   pubspec_lock: ^3.0.0
   pubspec_yaml: ^3.1.0
   yaml: ^3.1.0
