--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,13 @@ dependencies:
   meta: ^1.7.0
   path: ^1.8.0
   plain_optional: ^1.0.0
-  pubspec_lock: ^3.0.0
+  pubspec_lock: ^3.0.2
   pubspec_yaml: ^3.1.0
   yaml: ^3.1.0
 
 dev_dependencies:
-  build_runner: ^2.1.0
+  build_runner: ^2.3.3
   dependency_validator: ^3.1.0
   functional_data_generator: ^1.1.0
+  lints: ^2.0.1
   test: ^1.18.0
